[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Character.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/Dart-Soldier.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/NERF-Gun-Sprite.png" type="Texture" id=3]
[ext_resource path="res://scenes/Bullet.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 10.0503
height = 4.48346

[node name="Character" type="KinematicBody2D" groups=[
"mobs",
]]
script = ExtResource( 1 )
Bullet = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Gun" type="Sprite" parent="."]
position = Vector2( 8, 3 )
texture = ExtResource( 3 )
offset = Vector2( 4, -1 )

[node name="BulletSpawn" type="Position2D" parent="Gun"]
position = Vector2( 14, -4 )
__meta__ = {
"_gizmo_extents_": 3.0
}

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
